2016-05-11  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Only use integer values for size if units are px.

	* src/ftinspect.cpp (MainGUI::checkUnits): Implement it.
	(MainGUI::createLayout): Updated.

2016-05-11  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add file watching; remove watch button.

	* src/ftinspect.cpp (Engine::loadFont): Initialize file info.
	(Engine::watchCurrentFont): New method.
	(Engine::update): Updated.
	(MainGUI::MainGUI): Set up timer.
	(MainGUI::showFont): Add parameter to control updating of current
	indices.
	(MainGUI::watchCurrentFont): New method.
	(MainGUI::createLayout): Remove watch button code.
	(MainGUI::createConnections): Handle timer.

	* src/ftinspect.h (Engine): Add `currentFontFileInfo',
	`currentFontDateTime', `maxRetries', and `currentRetry'.
	Updated.
	(MainGUI): Updated.

2016-05-10  Werner Lemberg  <wl@gnu.org>

	* src/ftinspect.cpp, src/ftinspect.h (MainGUI): Provide `aboutQt'.

	This removes a warning at start-up.

2016-05-10  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Display rendered glyph bitmaps.

	* src/ftinspect.cpp (Engine::update): Updated.
	(GlyphBitmap::GlyphBitmap, GlyphBitmap::~GlyphBitmap,
	GlyphBitmap::boundRect, GlyphBitmap::paint): New methods
	for constructing a rendered bitmap of the glyph.
	(MainGUI::checkAntiAliasing): Updated.
	(MainGUI::setGraphicsDefaults): Create color mapping tables for 8bit
	and 1bit pixmaps as needed by Qt.
	(MainGUI::drawGlyph): Honor `show bitmap' check box.
	(MainGUI::createLayout, MainGUI::setDefaults): Updated.
	(MainGUI::createConnections): Handle `showBitmapCheckBox'.

	* src/ftinspect.h (GlyphBitmap): New class, derived from
	`QGraphicsItem'.
	(MainGUI): Mew member `currentGlyphBitmapItem'.
	New members `grayColorTable' and `monoColorTable'.
	Updated.
	(Engine): Remove unused `showBitmap' member.

2016-05-10  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Make hinting mode selection work.

	* src/ftinspect.cpp (Engine::loadFont): Set font type.